<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="si.matijav.kamino.ui.residentdetails.ResidentDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.residentdetails.ResidentDetailsFragment">

        <ImageView
            android:id="@+id/resident_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/resident"
            android:scaleType="fitCenter"
            app:imageUrl="@{viewModel.resident.imageUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/resident_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.resident.name, default=@string/placeholder_text}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resident_image" />

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resident_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/height_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/height_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/height"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{String.format(@string/height_value, viewModel.resident.height), default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/height_label"
                    tools:text="183 cm" />

                <TextView
                    android:id="@+id/mass_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/mass_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/height" />

                <TextView
                    android:id="@+id/mass"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{String.format(@string/mass_value, viewModel.resident.mass), default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/mass_label"
                    tools:text="72 kg" />

                <TextView
                    android:id="@+id/hair_color_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/hair_color_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/mass" />

                <TextView
                    android:id="@+id/hair_color"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.resident.hairColor, default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/hair_color_label"
                    tools:text="brown" />

                <TextView
                    android:id="@+id/skin_color_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/skin_color_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/hair_color" />

                <TextView
                    android:id="@+id/skin_color"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.resident.skinColor, default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/skin_color_label"
                    tools:text="fair" />

                <TextView
                    android:id="@+id/eye_color_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/eye_color_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/skin_color" />

                <TextView
                    android:id="@+id/eye_color"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.resident.eyeColor, default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/eye_color_label"
                    tools:text="brown" />

                <TextView
                    android:id="@+id/birth_year_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/birth_year_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/eye_color" />

                <TextView
                    android:id="@+id/birth_year"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.resident.birthYear, default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/birth_year_label"
                    tools:text="31.5BBY" />

                <TextView
                    android:id="@+id/gender_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/gender_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/birth_year" />

                <TextView
                    android:id="@+id/gender"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.resident.gender, default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/gender_label"
                    tools:text="male" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/start_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="24dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/end_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>