<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="si.matijav.kamino.ui.kaminoplanet.KaminoPlanetViewModel" />

        <variable
            name="fragment"
            type="si.matijav.kamino.ui.kaminoplanet.KaminoPlanetFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.kaminoplanet.KaminoPlanetFragment">

        <ImageView
            android:id="@+id/planet_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/kamino_planet"
            android:onClick="@{() -> fragment.onEnlargeImage()}"
            android:scaleType="fitCenter"
            app:imageUrl="@{viewModel.kaminoPlanet.imageUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageButton
            android:id="@+id/close"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:onClick="@{() -> fragment.onEnlargeImage()}"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/planet_image"
            app:layout_constraintTop_toTopOf="@id/planet_image"
            app:srcCompat="@drawable/ic_close" />

        <TextView
            android:id="@+id/planet_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.kaminoPlanet.name, default=@string/placeholder_text}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/planet_image" />

        <TextView
            android:id="@+id/likes_count"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@{String.format(@string/likes_value, viewModel.kaminoPlanet.likes), default=@string/placeholder_text}"
            app:layout_constraintEnd_toStartOf="@+id/like_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/planet_name"
            tools:text="10 likes" />

        <RadioButton
            android:id="@+id/like_button"
            style="@style/Widget.Button.Like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="@{viewModel.isKaminoPlanetLiked()}"
            android:enabled="@{@{!viewModel.isKaminoPlanetLiked()}"
            android:onClick="@{() -> fragment.onLikePlanet()}"
            app:layout_constraintBottom_toBottomOf="@id/likes_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/likes_count"
            app:layout_constraintTop_toTopOf="@id/likes_count"
            app:srcCompat="@drawable/ic_like_off" />

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/likes_count">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/population_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/population_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/population"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{String.format(@string/population_value, viewModel.kaminoPlanet.population), default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/population_label"
                    tools:text="1,000,000,000" />

                <Button
                    android:id="@+id/show_residents_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:onClick="@{() -> fragment.onSeeAllResidents(viewModel.kaminoPlanet)}"
                    android:text="@string/see_all_residents"
                    app:layout_constraintBottom_toBottomOf="@id/population"
                    app:layout_constraintEnd_toEndOf="@id/end_guideline"
                    app:layout_constraintTop_toTopOf="@id/population" />

                <TextView
                    android:id="@+id/rotation_period_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/rotation_period_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/population" />

                <TextView
                    android:id="@+id/rotation_period"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{String.format(@string/rotation_period_value, viewModel.kaminoPlanet.rotationPeriod), default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/rotation_period_label"
                    tools:text="27 hours" />

                <TextView
                    android:id="@+id/orbital_period_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/orbital_period_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/rotation_period" />

                <TextView
                    android:id="@+id/orbital_period"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{String.format(@string/orbital_period_value, viewModel.kaminoPlanet.orbitalPeriod), default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/orbital_period_label"
                    tools:text="463 standard days" />

                <TextView
                    android:id="@+id/diameter_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/diameter_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/orbital_period" />

                <TextView
                    android:id="@+id/diameter"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{String.format(@string/diameter_value, viewModel.kaminoPlanet.diameter), default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/diameter_label"
                    tools:text="19720 km" />

                <TextView
                    android:id="@+id/climate_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/climate_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/diameter" />

                <TextView
                    android:id="@+id/climate"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.kaminoPlanet.climate, default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/climate_label"
                    tools:text="Temperate" />

                <TextView
                    android:id="@+id/gravity_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/gravity_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/climate" />

                <TextView
                    android:id="@+id/gravity"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.kaminoPlanet.gravity, default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/gravity_label"
                    tools:text="1 standard" />

                <TextView
                    android:id="@+id/terrain_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/terrain_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/gravity" />

                <TextView
                    android:id="@+id/terrain"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{viewModel.kaminoPlanet.terrain, default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/terrain_label"
                    tools:text="ocean" />

                <TextView
                    android:id="@+id/surface_water_label"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/surface_water_label"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/terrain" />

                <TextView
                    android:id="@+id/surface_water"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{String.format(@string/surface_water_value, viewModel.kaminoPlanet.surfaceWater), default=@string/placeholder_text}"
                    app:layout_constraintStart_toStartOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/surface_water_label"
                    tools:text="100%" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/start_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="24dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/end_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
